<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clouds"
    tools:context="com.example.user.superspinner.homepage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="4dp"


        android:background="@color/Teal"
        android:text="@string/homemessage"
        android:textColor="@color/Silver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="148dp"
        android:layout_height="63dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/buttonshape"
        android:text="@string/redspinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="151dp"
        android:layout_height="65dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/darkbluespinenr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="32dp"
        android:background="@color/Black"
        android:text="@string/blackSpinner"
        android:textColor="@color/colorbackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="132dp"
        android:background="@color/Black"
        android:text="@string/NeonSpinner"
        android:textColor="@color/Lime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
</android.support.constraint.ConstraintLayout>
